# screenresolution-rs

./: .travis.yml  Cargo.toml  README.md  bitbucket-pipelines.yml
src/: errors.rs  main.rs  mode.rs
