[package]
name = "screenresolution-rs"
version = "0.1.0"
authors = ["Bernard Niset <bernard.niset@gmail.com>"]

[dependencies]
libc = "0.2"
core-graphics = { git = "https://github.com/bn3t/core-foundation-rs.git", branch = "cgdisplaymode-extensions" }
core-foundation = { git = "https://github.com/bn3t/core-foundation-rs.git", branch = "cgdisplaymode-extensions" }
foreign-types = "0.3.0"
clap = "2.32.0"
regex = "1.0.4"