[package]
name = "screenresolution-rs"
version = "0.1.7"
authors = ["Bernard Niset"]
description = "Allows to list, get and set screen resolutions."

[dependencies]
libc = "0.2"
core-graphics = "0.17.2"
# core-graphics = { git = "https://github.com/bn3t/core-foundation-rs.git", branch = "cgdisplaymode-extensions" }
# core-graphics = { path="../core-foundation-rs/core-graphics" }
core-foundation = "0.6.2"
# core-foundation = { git = "https://github.com/bn3t/core-foundation-rs.git", branch = "cgdisplaymode-extensions" }
# core-foundation =  { path="../core-foundation-rs/core-foundation" }
foreign-types = "0.3.0"
clap = "2.32.0"
regex = "1.0.4"
error-chain = "0.12.0"
dialoguer={git="https://github.com/bn3t/dialoguer.git", branch="quit-option-in-select"}

[build-dependencies]
chrono = "0.4.0"
